--- a/app/src/main/res/anim/move_center_animation.xml
+++ b/app/src/main/res/anim/move_center_animation.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-     android:fillAfter="true">
+     android:fillAfter="true"
+     android:duration="1000">
 
     <translate
-            android:fromYDelta="0%p"
-            android:toYDelta="20%p"
-            android:fromXDelta="0%p"
-            android:toXDelta="-18%p"
-            android:duration="2000"
-    />
+            android:fromXDelta="0%"
+            android:toXDelta="-50%"
+            android:fromYDelta="0%"
+            android:toYDelta="50%"
+            android:interpolator="@android:anim/decelerate_interpolator"/>
 
     <scale
-            android:duration="2000"
-            android:fromXScale = "1"
-            android:fromYScale = "1"
-            android:pivotX = "50%"
-            android:pivotY = "50%"
-            android:toXScale = "1.8"
-            android:toYScale = "1.8"
-        />
-
+            android:fromXScale="1.0"
+            android:toXScale="1.5"
+            android:fromYScale="1.0"
+            android:toYScale="1.5"
+            android:pivotX="50%"
+            android:pivotY="50%"/>
 </set>
