--- a/app/src/main/res/anim/move_down_animation.xml
+++ b/app/src/main/res/anim/move_down_animation.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fillAfter="true">
-  <translate
-          android:fromYDelta="0%p"
-          android:toYDelta="90%p"
-          android:duration="1000"
-      />
+     android:fillAfter="true"
+     android:duration="500">
+
+    <translate
+            android:fromYDelta="0%"
+            android:toYDelta="10%"
+            android:interpolator="@android:anim/decelerate_interpolator"/>
 </set>
