--- a/app/src/main/res/anim/rocket_animation.xml
+++ b/app/src/main/res/anim/rocket_animation.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fillAfter="true">
+     android:fillAfter="true">
 
-    <scale
-        android:duration="1000"
-        android:pivotX="50%"
-        android:pivotY="50%"
-        android:fromXScale="1"
-        android:fromYScale="1"
-        android:toXScale="0.9"
-        android:toYScale="0.9"
-        android:repeatCount="infinite"
-        android:repeatMode="reverse"/>
+    <translate
+            android:fromYDelta="0%"
+            android:toYDelta="-10%"
+            android:duration="1000"
+            android:repeatCount="infinite"
+            android:repeatMode="reverse"
+            android:interpolator="@android:anim/linear_interpolator"/>
+
+    <alpha
+            android:fromAlpha="1.0"
+            android:toAlpha="0.8"
+            android:duration="1000"
+            android:repeatCount="infinite"
+            android:repeatMode="reverse"/>
 </set>
