--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
-      tools:ignore="ExtraText">
-
-        <item
-                android:id="@+id/bnt_home"
-                android:icon="@drawable/bnt_home"
-                android:title="@string/home" />
-
-
-    <item android:title="Setting"
-            android:icon="@drawable/bnt_setting"
-            android:id="@+id/bnt_setting"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+            android:id="@+id/homeFragment"
+            android:icon="@drawable/ic_home"
+            android:title="@string/home"/>
 
     <item
             android:id="@+id/gameFragment"
-            android:icon="@drawable/moon_icon"
-            android:title="game"
-    />
+            android:icon="@drawable/ic_game"
+            android:title="@string/game"/>
+
+    <item
+            android:id="@+id/settingFragment"
+            android:icon="@drawable/bnt_setting"
+            android:title="@string/settings"/>
 </menu>
