--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
             app:startDestination="@id/loginFragment">
 
     <fragment
-            android:id="@+id/bnt_home"
+            android:id="@+id/homeFragment"
             android:name="com.example.galacticore.HomeFragment"
             android:label="Home"
             tools:layout="@layout/fragment_home">
@@ -16,7 +16,31 @@
         <action
                 android:id="@+id/action_homeFragment_to_transactionDetailFragment"
                 app:destination="@id/transactionDetailFragment" />
-        <action android:id="@+id/action_bnt_home_to_settingFragment" app:destination="@id/settingFragment"/>
+        <action
+                android:id="@+id/action_homeFragment_to_gameFragment"
+                app:destination="@id/gameFragment"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"/>
+        <action
+                android:id="@+id/action_homeFragment_to_settingFragment"
+                app:destination="@id/settingFragment"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"/>
+    </fragment>
+
+    <fragment
+            android:id="@+id/gameFragment"
+            android:name="com.example.galacticore.GameFragment"
+            android:label="Game"
+            tools:layout="@layout/fragment_game">
+        <action
+                android:id="@+id/action_gameFragment_to_homeFragment"
+                app:destination="@id/homeFragment"
+                app:popUpTo="@id/homeFragment"
+                app:popUpToInclusive="true" />
+        <action
+                android:id="@+id/action_gameFragment_to_settingFragment"
+                app:destination="@id/settingFragment"/>
     </fragment>
 
     <fragment
@@ -26,8 +50,8 @@
             tools:layout="@layout/fragment_add_transaction">
         <action
                 android:id="@+id/action_addTransactionFragment_to_homeFragment"
-                app:destination="@id/bnt_home"
-                app:popUpTo="@id/bnt_home"
+                app:destination="@id/homeFragment"
+                app:popUpTo="@id/homeFragment"
                 app:popUpToInclusive="true" />
     </fragment>
 
@@ -39,6 +63,11 @@
         <argument
                 android:name="transaction"
                 app:argType="com.example.galacticore.Transaction" />
+        <action
+                android:id="@+id/action_transactionDetailFragment_to_homeFragment"
+                app:destination="@id/homeFragment"
+                app:popUpTo="@id/homeFragment"
+                app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
@@ -48,27 +77,48 @@
             tools:layout="@layout/fragment_login">
         <action
                 android:id="@+id/action_loginFragment_to_homeFragment"
-                app:destination="@id/bnt_home"
+                app:destination="@id/homeFragment"
                 app:popUpTo="@id/loginFragment"
                 app:popUpToInclusive="true" />
-        <action android:id="@+id/action_loginFragment_to_registrationFragment"
-                app:destination="@id/registrationFragment"/>
+        <action
+                android:id="@+id/action_loginFragment_to_registrationFragment"
+                app:destination="@id/registrationFragment"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"/>
     </fragment>
-    <fragment android:id="@+id/registrationFragment" android:name="com.example.galacticore.RegistrationFragment"
-              android:label="fragment_registration" tools:layout="@layout/fragment_registration">
-        <action android:id="@+id/action_registrationFragment_to_loginFragment" app:destination="@id/loginFragment"/>
-    </fragment>
-    <fragment android:id="@+id/settingFragment" android:name="com.example.galacticore.SettingFragment"
-              android:label="fragment_setting" tools:layout="@layout/fragment_setting">
-        <action android:id="@+id/action_settingFragment_to_bnt_home" app:destination="@id/bnt_home"/>
-    </fragment>
-
-
 
     <fragment
-            android:id="@+id/gameFragment"
-            android:name="com.example.galacticore.GameFragment"
-            android:label="Game"
-            tools:layout="@layout/fragment_game" />
+            android:id="@+id/registrationFragment"
+            android:name="com.example.galacticore.RegistrationFragment"
+            android:label="Registration"
+            tools:layout="@layout/fragment_registration">
+        <action
+                android:id="@+id/action_registrationFragment_to_loginFragment"
+                app:destination="@id/loginFragment"
+                app:popUpTo="@id/loginFragment"
+                app:popUpToInclusive="true"/>
+    </fragment>
+
+    <fragment
+            android:id="@+id/settingFragment"
+            android:name="com.example.galacticore.SettingFragment"
+            android:label="Settings"
+            tools:layout="@layout/fragment_setting">
+        <action
+                android:id="@+id/action_settingFragment_to_homeFragment"
+                app:destination="@id/homeFragment"
+                app:popUpTo="@id/homeFragment"
+                app:popUpToInclusive="true"/>
+        <action
+                android:id="@+id/action_settingFragment_to_gameFragment"
+                app:destination="@id/gameFragment"/>
+    </fragment>
+
+    <!-- Global Actions -->
+    <action
+            android:id="@+id/action_global_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true"/>
 
 </navigation>
